<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Ephemerides</string>
    <string name="lbl_menu_prefs">Préférences</string>
    <string name="lbl_menu_refresh">Actualiser</string>
    <string name="lbl_menu_menu">Menu</string>
    <string name="prf_default_location">Site par défaut</string>
    <string name="prf_location_list">Liste des sites</string>
    <string name="prf_location_list_summary">Veuillez sélectionner votre site d\'observation</string>
    <string name="prf_location_list_dialog">Sélectionner votre site</string>
    <string name="prf_time_settings">Paramètres temporels</string>
    <string name="prf_time_settings_summary">Veuillez définir vos préférences temporelles</string>
    <string name="prf_perso_settings">Paramètres personnels</string>
    <string name="prf_perso_settings_summary">Veuillez définir vos préférences personnelles</string>
    <string name="prf_current_locked_time">Heure courante / pré-définie</string>
    <string name="prf_current_locked_time_summary">Heure courante ou heure pré-définie</string>
    <string name="prf_current_locked_time_summary_on">Une heure pré-définie sera utilisée pour les calculs</string>
    <string name="prf_current_locked_time_summary_off">L\'heure courante sera utilisée pour les calculs</string>
    <string name="prf_auto_refresh">Rafraichissement automatique</string>
    <string name="prf_auto_refresh_summary">Les calculs seront automatiquement rafraichis si cette option est cochée</string>
    <string name="prf_current_auto_refresh_summary_on">Le rafraichissement automatique des calculs est activé</string>
    <string name="prf_current_auto_refresh_summary_off">Le rafraichissement automatique des calculs est désactivé</string>
    <string name="prf_date">Date</string>
    <string name="prf_date_summary">Date de calcul</string>
    <string name="prf_date_dialog">Veuillez entrer une date</string>
    <string name="prf_time">Heure</string>
    <string name="prf_time_summary">Heure de calcul</string>
    <string name="prf_time_dialog">Veuillez entrer une heure</string>
    <string name="str_title_earth_location">SITE D\'OBSERVATION</string>
    <string name="str_location">Site</string>
    <string name="str_latitude">Latitude</string>
    <string name="str_longitude">Longitude</string>
    <string name="str_elevation">Altitude</string>
    <string name="str_title_time">DATE &amp; HEURE</string>
    <string name="str_time">Heure</string>
    <string name="str_d2000">D2000</string>
    <string name="str_time_zone">Fuseau horaire</string>
    <string name="str_tzv_offset">Décalage horaire</string>
    <string name="str_obliquity_ecliptic">Obliquité de l\'écliptique</string>
    <string name="str_sun">Soleil</string>
    <string name="str_moon">Lune</string>
    <string name="str_venus">Vénus</string>
    <string name="str_neptune">Neptune</string>
    <string name="str_uranus">Uranus</string>
    <string name="str_mercury">Mercure</string>
    <string name="str_saturn">Saturne</string>
    <string name="str_mars">Mars</string>
    <string name="str_earth">Terre</string>
    <string name="str_jupiter">Jupiter</string>
    <string name="str_mean_longitude">Longitude moyenne</string>
    <string name="str_true_anomaly">Anomalie vraie</string>
    <string name="str_distance">Distance</string>
    <string name="str_right_ascension">Ascension droite</string>
    <string name="str_declination">Déclinaison</string>
    <string name="str_title_citation">CITATION</string>
    <string name="str_title_blague">BLAGUE</string>
    <string name="str_title_le_saviez_vous">LE SAVIEZ-VOUS ?</string>
    <string name="str_title_today">AUJOURD\'HUI</string>
    <string name="str_title_dictons">DICTONS</string>
    <string name="str_title_horoscope">HOROSCOPE</string>
    <string name="str_title_calendriers">QUEL JOUR SOMMES-NOUS ?</string>
    <string name="str_title_whattimeisit">QUELLE HEURE EST-IL ?</string>
    <string name="str_title_fruits_month">LES FRUITS DE SAISON</string>
    <string name="str_title_vegetables_month">LES LEGUMES DE SAISON</string>
    <string name="str_week">Semaine</string>
    <string name="prf_display_settings">Paramètres d\'affichage</string>
    <string name="prf_time_display_font">Police d\'affichage de l\'heure</string>
    <string name="prf_time_display_font_summary">Préférence pour la police d\'affichage de l\'heure</string>
    <string name="prf_time_display_font_dialog">Choisissez la police à utiliser</string>
    <string name="prf_perso_horoscope">Signe astrologique</string>
    <string name="prf_perso_horoscope_summary">Paramètrage de votre signe astrologique pour l\'affichage de l\'horoscope</string>
    <string name="prf_perso_horoscope_dialog">Choisissez votre signe astrologique</string>
    <string name="prf_rss_dialog">Flux RSS</string>
    <string name="prf_rss_settings">Flux RSS</string>
    <string name="prf_rss_summary">Choix du flux RSS</string>
    <string name="prf_rss">Flux RSS</string>
    <string name="str_new_rss">Nouveau flux RSS</string>
    <string name="str_label_rss">Titre du flux</string>
    <string name="str_value_rss">Adresse du flux</string>
</resources>
