<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/prf_default_location">
        <ListPreference
            android:dialogTitle="@string/prf_location_list_dialog"
            android:entries="@array/lblDBLocation"
            android:entryValues="@array/valDBLocation"
            android:key="prfDBList"
            android:summary="@string/prf_location_list_summary"
            android:title="@string/prf_location_list"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prf_time_settings">
        <CheckBoxPreference
            android:key="chkPrefLockedTime"
            android:summary="@string/prf_time_settings_summary"
            android:summaryOff="@string/prf_current_locked_time_summary_off"
            android:summaryOn="@string/prf_current_locked_time_summary_on"
            android:title="@string/prf_current_locked_time"/>
        <EditTextPreference
            android:dependency="chkPrefLockedTime"
            android:dialogTitle="@string/prf_date_dialog"
            android:key="prefDate"
            android:summary="@string/prf_date_summary"
            android:title="@string/prf_date"/>
        <EditTextPreference
            android:dependency="chkPrefLockedTime"
            android:dialogTitle="@string/prf_time_dialog"
            android:key="prefTime"
            android:summary="@string/prf_time_summary"
            android:title="@string/prf_time"/>
        <CheckBoxPreference
            android:key="chkPrefAutoRefresh"
            android:summary="@string/prf_auto_refresh_summary"
            android:summaryOff="@string/prf_current_auto_refresh_summary_off"
            android:summaryOn="@string/prf_current_auto_refresh_summary_on"
            android:title="@string/prf_auto_refresh"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prf_perso_settings">
        <ListPreference
            android:dialogTitle="@string/prf_perso_horoscope_dialog"
            android:entries="@array/lblHoroscope"
            android:entryValues="@array/valHoroscope"
            android:key="prfAstrologicalSign"
            android:summary="@string/prf_perso_horoscope_summary"
            android:title="@string/prf_perso_horoscope"
            android:defaultValue="8"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prf_display_settings">
        <ListPreference
            android:dialogTitle="@string/prf_time_display_font_dialog"
            android:entries="@array/lblTimeDisplayFont"
            android:entryValues="@array/valTimeDisplayFont"
            android:key="prfTimeDisplayFont"
            android:summary="@string/prf_time_display_font_summary"
            android:title="@string/prf_time_display_font"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prf_rss_settings">
        <ListPreference
            android:dialogTitle="@string/prf_rss_dialog"
            android:entries="@array/lblRSS"
            android:entryValues="@array/valRSS"
            android:key="prfRSS"
            android:summary="@string/prf_rss_summary"
            android:title="@string/prf_rss"
            />
    </PreferenceCategory>
</PreferenceScreen>
